terraform/modules/jenkins/security_groups.tf
resource "aws_security_group" "jenkins" {
  name        = "${var.name}-jenkins-sg"
  description = "Access rules for Jenkins controller"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowed_ssh_cidrs
  }

  ingress {
    description = "Jenkins UI"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = var.allowed_http_cidrs
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(var.tags, {
    Name = "${var.name}-jenkins-sg"
  })
}

output "security_group_id" {
  value = aws_security_group.jenkins.id
}
